--- a/views/rider/rideroutecheck.handlebars
+++ b/views/rider/rideroutecheck.handlebars
@@ -1,7 +1,3 @@
-<style type="text/css">
-    @import url("/css/map.css");
-</style>
-
 <div class="breadcrumb-area pt-35 pb-35 bg-gray-3">
     <div class="container">
         <div class="breadcrumb-content text-center">
@@ -14,47 +10,23 @@
         </div>
     </div>
 </div>
-<div class="contact-area pt-100 pb-100" style="width: auto;">
+<div class="contact-area pt-100 pb-100">
     <div class="container">
-        <form action="/map/{{OrdersDetails.id}}?_method=PUT" method="post" enctype="multipart/form-data"
-            class="form-horizontal" id="acceptForm" style="display: none;">
-            <div class="container-fluid">
-                <div class="col-xs-4">
-                    {{#ifCond OrdersDetails.id '==' id }}
-                    <label for="from" class="col-xs-2 control-label"><i class="far fa-dot-circle"></i></label>
-                    <input type="text" id="from" placeholder="Origin" class="form-control"
-                        value="{{OrdersDetails.address1}} {{OrdersDetails.address2}} {{OrdersDetails.city}} {{OrdersDetails.postalcode}}">
-                </div>
-                <div class="form-group">
-                    <div class="col-xs-4">
-                        <label for="to" class="col-xs-2 control-label"><i class="fas fa-map-marker-alt"></i></label>
-                        <input type="text" id="to" placeholder="Destination" class="form-control"
-                            value="{{OrdersDetails.shopname}} {{OrdersDetails.address1}} {{OrdersDetails.address2}} {{OrdersDetails.city}} {{OrdersDetails.postalcode}}">
-                        {{/ifCond}}
-                    </div>
-                </div>
-        </form>
-    </div>
-    <div class="contact-map mb-10">
-        {{!-- <div id="map"></div> --}}
-        <div class="container-fluid">
-            <div id="googleMap">
-            </div>
-            <div id="output">
-            </div>
+        <div class="contact-map mb-10">
+            {{!-- <div id="map"></div> --}}
+            <img src="/img/Map1.png" alt="" height="600px" width="1170px">
         </div>
-    </div>
-    <div class="container-fluid">
         <div class="custom-row-2">
             <div class="col-lg-4 col-md-5">
                 <div class="contact-info-wrap">
+
                     <div class="single-contact-info">
                         <div class="contact-icon">
                             <i class="fa fa-globe"></i>
                         </div>
                         <div class="contact-info-dec">
                             <p><a href="#">Time Now</a></p>
-                            <div id="time"></div>
+                            <p><a href="#">6:43pm</a></p>
                         </div>
                     </div>
                     <div class="single-contact-info">
@@ -62,11 +34,8 @@
                             <i class="fa fa-map-marker"></i>
                         </div>
                         <div class="contact-info-dec">
-                            {{#ifCond OrdersDetails.id '==' id }}
-                            <p>Destination </p>
-                            <p>{{OrdersDetails.shopname}} {{OrdersDetails.address1}} {{OrdersDetails.address2}}
-                                {{OrdersDetails.city}} {{OrdersDetails.postalcode}}</p>
-                            {{/ifCond}}
+                            <p>Address </p>
+                            <p>Bedok Tailoring Shop <br>Blk 94B Bedok North Ave 4 Singapore 342123</p>
                         </div>
                     </div>
                     <div class="single-contact-info">
@@ -75,7 +44,7 @@
                         </div>
                         <div class="contact-info-dec">
                             <p>Customer Emergency Contact</p>
-                            <p>+65 9832 2343</p>
+                            <p>+65 9721 7106</p>
                         </div>
                     </div>
                 </div>
@@ -83,40 +52,244 @@
             <div class="col-lg-8 col-md-7">
                 <div class="contact-form">
                     <div class="contact-title mb-30">
-                        {{#ifCond OrdersDetails.id '==' id }}
                         <h2>Delivery Details: </h2>
                     </div>
-                    <p>Customer: {{OrdersDetails.username}}</p>
-                    <p>Delivery Date: {{OrdersDetails.deliverydate}}</p>
-                    <p>Pick Up
-                        Location:{{OrdersDetails.address1}}<br>{{OrdersDetails.address2}}<br>{{OrdersDetails.city}}
-                        {{OrdersDetails.postalcode}}</p>
-                    {{/ifCond}}
+                    <p>Customer: Customer1</p>
+                    <p>Delivery Fee: $6</p>
+                    <p>By when: 8pm 15/05/2021 (today)</p>
+                    <p>Package Size: 20 x 10 x 10 cm </p>
+                    <p>Package Weight: 1.00 kg</p>
+                    <form action="POST">
+                        <p>Receiver Signature</p>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                    </form>
                     <br>
-                    <div class="pro-details-cart btn-hover">
-                                <form action="/rider/rordercompleted/{{id}}?_method=PUT" method="post" id="acceptForm">
-                                <input type="hidden" name="_method" value="PUT">
-                                    <input style="padding-right: 60px; padding-left:50px; margin-left:-10px;"
-                                        type="submit" name="upvote" value="Order Delivered" />
-                                </form>
-                            </div>
+                     <a href="/rordercompleted" class="error-btn" >Order Delievered</a>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
 </div>
-</div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7WArNAN7RKK-Zcx9KBEIHNXzSlW0P1j4&libraries=places"></script>
-<script src="/js/map.js"></script>
+
+
+
+
+
+
+
+
+<!-- JS
+============================================ -->
+
+<!-- jQuery JS -->
+<script src="assets/js/vendor/jquery-v3.4.1.min.js"></script>
+<!-- Popper JS -->
+<script src="assets/js/popper.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="assets/js/bootstrap.min.js"></script>
+<!-- Plugins JS -->
+<script src="assets/js/plugins.js"></script>
+<!-- Ajax Mail -->
+<script src="assets/js/ajax-mail.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGM-62ap9R-huo50hJDn05j3x-mU9151Y"></script>
 <script>
-    window.onload = function () {
-        calcRoute();
+    function init() {
+        var mapOptions = {
+            zoom: 11,
+            scrollwheel: false,
+            center: new google.maps.LatLng(40.709896, -73.995481),
+            styles:
+                [
+                    {
+                        "featureType": "water",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#e9e9e9"
+                            },
+                            {
+                                "lightness": 17
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "landscape",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#f5f5f5"
+                            },
+                            {
+                                "lightness": 20
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.highway",
+                        "elementType": "geometry.fill",
+                        "stylers": [
+                            {
+                                "color": "#ffffff"
+                            },
+                            {
+                                "lightness": 17
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.highway",
+                        "elementType": "geometry.stroke",
+                        "stylers": [
+                            {
+                                "color": "#ffffff"
+                            },
+                            {
+                                "lightness": 29
+                            },
+                            {
+                                "weight": 0.2
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.arterial",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#ffffff"
+                            },
+                            {
+                                "lightness": 18
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.local",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#ffffff"
+                            },
+                            {
+                                "lightness": 16
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#f5f5f5"
+                            },
+                            {
+                                "lightness": 21
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi.park",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#dedede"
+                            },
+                            {
+                                "lightness": 21
+                            }
+                        ]
+                    },
+                    {
+                        "elementType": "labels.text.stroke",
+                        "stylers": [
+                            {
+                                "visibility": "on"
+                            },
+                            {
+                                "color": "#ffffff"
+                            },
+                            {
+                                "lightness": 16
+                            }
+                        ]
+                    },
+                    {
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "saturation": 36
+                            },
+                            {
+                                "color": "#333333"
+                            },
+                            {
+                                "lightness": 40
+                            }
+                        ]
+                    },
+                    {
+                        "elementType": "labels.icon",
+                        "stylers": [
+                            {
+                                "visibility": "off"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "transit",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#f2f2f2"
+                            },
+                            {
+                                "lightness": 19
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "administrative",
+                        "elementType": "geometry.fill",
+                        "stylers": [
+                            {
+                                "color": "#fefefe"
+                            },
+                            {
+                                "lightness": 20
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "administrative",
+                        "elementType": "geometry.stroke",
+                        "stylers": [
+                            {
+                                "color": "#fefefe"
+                            },
+                            {
+                                "lightness": 17
+                            },
+                            {
+                                "weight": 1.2
+                            }
+                        ]
+                    }
+                ]
+        };
+        var mapElement = document.getElementById('map');
+        var map = new google.maps.Map(mapElement, mapOptions);
+        var marker = new google.maps.Marker({
+            position: new google.maps.LatLng(40.709896, -73.995481),
+            map: map,
+            icon: 'assets/img/icon-img/2.png',
+            animation: google.maps.Animation.BOUNCE,
+            title: 'Snazzy!'
+        });
     }
-    var today = new Date();
-    var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
-    document.getElementById("time").innerHTML = time;
+    google.maps.event.addDomListener(window, 'load', init);
 </script>
+<!-- Main JS -->
+<script src="assets/js/main.js"></script>
