--- a/views/partials/_rnavbar.handlebars
+++ b/views/partials/_rnavbar.handlebars
@@ -10,18 +10,19 @@
             </div>
             <div class="col-xl-8 col-lg-8 d-none d-lg-block">
                 <div class="main-menu">
-                     {{#if (eq user.usertype "rider")}}
                     <nav>
                         <ul>
+                     {{#if (eq user.usertype "rider")}}
+                    
                             <li><a href="">View Orders </a></li>
                             <li><a href="">My Orders </a></li>
 
                             <li><a href="/faq">Help </a></li>
+                    {{else}}
+                            <li><a href="/rider/riderlogin">Welcome to TailorNow, sign in to continue.</a></li> 
+                    {{/if}}
                         </ul>
                     </nav>
-                    {{else}}
-                    <center>Welcome to TailorNow, sign in to continue.</center>
-                    {{/if}}
                 </div>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-6 col-8">
