--- a/views/partials/_rnavbar.handlebars
+++ b/views/partials/_rnavbar.handlebars
@@ -14,8 +14,8 @@
                         <ul>
                      {{#if (eq user.usertype "rider")}}
                     
-                            <li><a href="">View Orders </a></li>
-                            <li><a href="">My Orders </a></li>
+                            <li><a href="/rider/rordersmain">View Orders </a></li>
+                            <li><a href="/rider/riderhist/{{user.id}}">My Orders </a></li>
 
                             <li><a href="/faq">Help </a></li>
                     {{else}}
